--- a/index.html
+++ b/index.html
@@ -168,8 +168,6 @@
       </div>
     </section><!--END of .dg-works-->
 
-    
-
     <footer class="dg-footer" id="dg-footer">
       <div class="container-fluid">
         <div class="dg-footer-text wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
@@ -199,5 +197,15 @@
     <script src="js/wow.min.js"></script>
     <script src="js/outdatedbrowser.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87257879-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
