--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="dg-hero" id="dg-hero">
       <div class="container-fluid">
         <div class="dg-hero-text" id="dg-hero-text">
-          <h1 class="wow fadeInUpsm" data-wow-delay="0.6s" data-wow-duration="0.6s">Hello there!</h1>
-          <p class="wow fadeIn" data-wow-delay="0.7s" data-wow-duration="0.6s">My name is <strong>Don Gepulango</strong> — a front-end coder/designer from Philippines. I love crafting stuff in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
+          <h1 class="wow fadeInUpsm" data-wow-delay="0.6s" data-wow-duration="0.6s">Hello —</h1>
+          <p class="wow fadeIn" data-wow-delay="0.7s" data-wow-duration="0.6s">My name is <strong>Don Gepulango</strong> — a front-end developer from Philippines. I love crafting stuff in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
         </div>
       </div>
 
@@ -42,10 +42,10 @@
 
     <section class="dg-works" id="dg-works">
       <div class="container-fluid">
-        
+
         <div class="dg-works-heading">
           <h2>Projects & Clients</h2>
-          <p>Some projects that I have work with</p>
+          <p>Selected projects that I have work with</p>
         </div>
 
         <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
@@ -171,7 +171,7 @@
     <footer class="dg-footer" id="dg-footer">
       <div class="container-fluid">
         <div class="dg-footer-text wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h2>Don Gepulango</h2>
+          <h2>Get in touch.</h2>
           <ul class="dg-social list-unstyled list-inline">
             <li><a href="https://twitter.com/dongepulango" target="_blank">Twitter</a></li>
             <li><a href="https://www.instagram.com/dongepulango/" target="_blank">Instagram</a></li>
@@ -203,7 +203,6 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-87257879-1', 'auto');
       ga('send', 'pageview');
     </script>
