--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 </head>
-  <body>
+  <body class="preload">
 
     <nav class="dg-nav" id="dg-nav">
       <div class="dg-logo wow fadeInDownsm" data-wow-duration="0.6s" data-wow-delay="1s">
