--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container-fluid">
         <div class="dg-hero-text" id="dg-hero-text">
           <h1 class="wow fadeInUpsm" data-wow-delay="1s" data-wow-duration="0.6s">Hello —</h1>
-          <p class="wow fadeIn" data-wow-delay="1.1s" data-wow-duration="0.6s">My name is <strong>Don Gepulango</strong> — a front-end developer from Philippines. I love crafting stuff in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
+          <p class="wow fadeIn" data-wow-delay="1.1s" data-wow-duration="0.6s">My name is <strong>Don Gepulango</strong> — a front-end developer from Philippines. I love crafting UI in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
         </div>
       </div>
 
