--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <!--Animations-->
-  <link rel="stylesheet" href="css/animate.css">
   <!--Main Styles-->
   <link rel="stylesheet" href="css/styles.css">
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -21,168 +19,35 @@
   <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 </head>
-  <body class="preload">
+  <body>
 
-    <nav class="dg-nav" id="dg-nav">
-      <div class="dg-logo wow fadeInDownsm" data-wow-duration="0.6s" data-wow-delay="1s">
+    <header class="dg-header">
+      <div class="dg-logo">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102.1 102.1"><path class="path1" d="M51.1 0C22.9 0 0 22.9 0 51.1s22.9 51.1 51.1 51.1c28.2 0 51.1-22.9 51.1-51.1S79.3 0 51.1 0zM51.1 95.7c-24.7 0-44.7-20-44.7-44.7 0-24.7 20-44.7 44.7-44.7 24.7 0 44.7 20 44.7 44.7C95.7 75.7 75.7 95.7 51.1 95.7z"/><path class="path2" d="M22.1 75.4V26.6c0-0.6 0.2-1.1 0.7-1.6 0.4-0.4 1-0.7 1.6-0.7h12.2c1.7 0 3.4 0.3 5 1 1.6 0.7 3 1.6 4.1 2.8 1.2 1.2 2.1 2.6 2.8 4.1 0.7 1.6 1 3.3 1 5v27.5c0 1.8-0.3 3.4-1 5.1 -0.7 1.5-1.6 2.9-2.8 4.1 -1.2 1.2-2.6 2.1-4.1 2.8 -1.6 0.7-3.3 1-5 1H24.4c-0.6 0-1.2-0.2-1.6-0.6C22.4 76.7 22.1 76.1 22.1 75.4zM29.8 70.1h6.8c1.5 0 2.8-0.5 3.8-1.5 1-1 1.5-2.3 1.5-3.8V37.3c0-1.5-0.5-2.7-1.5-3.8 -1.1-1.1-2.3-1.6-3.8-1.6h-6.8V70.1z"/><path class="path2" d="M51.8 65.5V36.6c0-1.8 0.3-3.5 1-5.1 0.7-1.6 1.6-3 2.8-4.2 1.1-1.1 2.5-2.1 4.1-2.8 1.6-0.7 3.3-1 5-1H67c1.7 0 3.4 0.3 5 1 1.6 0.7 3 1.6 4.1 2.8 1.2 1.2 2.1 2.6 2.8 4.2 0.7 1.6 1 3.3 1 5.1v1.5c0 0.6-0.2 1.1-0.7 1.6 -0.4 0.4-1 0.7-1.7 0.7h-3c-0.6 0-1.2-0.2-1.6-0.7 -0.4-0.4-0.7-1-0.7-1.6v-1.5c0-1.5-0.5-2.7-1.6-3.8 -1-1.1-2.3-1.6-3.8-1.6h-2.3c-1.5 0-2.8 0.5-3.8 1.6 -1 1.1-1.5 2.4-1.5 3.8v28.9c0 1.5 0.5 2.7 1.5 3.8 1 1.1 2.3 1.6 3.8 1.6H67c1.5 0 2.8-0.5 3.8-1.6 1.1-1.1 1.6-2.4 1.6-3.8V54.9h-6.2c-0.6 0-1.1-0.2-1.6-0.7 -0.4-0.4-0.7-1-0.7-1.6v-3c0-0.7 0.2-1.2 0.7-1.7s1-0.6 1.6-0.6h11.5c0.7 0 1.2 0.2 1.7 0.6 0.4 0.4 0.7 1 0.7 1.7v16c0 1.8-0.3 3.5-1 5.1 -0.7 1.5-1.6 2.9-2.8 4.1 -1.2 1.2-2.6 2.1-4.1 2.8 -1.6 0.7-3.3 1-5 1h-2.3c-1.7 0-3.4-0.3-5-1 -1.6-0.7-3-1.6-4.1-2.8 -1.2-1.2-2.1-2.6-2.8-4.1C52.1 69.1 51.8 67.4 51.8 65.5z"/></svg>
       </div>
-      <a href="mailto:dongepulango@gmail.com" class="dg-contact wow fadeInDownsm" data-wow-duration="0.6s" data-wow-delay="1s">Contact Me</a>
-    </nav>
+      <a href="mailto:dongepulango@gmail.com" class="dg-contact">Contact Me</a>
+    </header><!--END of .dg-header-->
 
-    <section class="dg-hero" id="dg-hero">
-      <div class="container-fluid">
+    <div class="dg-wrapper">
+
+      <section class="dg-hero" id="dg-hero">
         <div class="dg-hero-text" id="dg-hero-text">
-          <h1 class="wow fadeInUpsm" data-wow-delay="1s" data-wow-duration="0.6s">Hello —</h1>
-          <p class="wow fadeIn" data-wow-delay="1.1s" data-wow-duration="0.6s">My name is <strong>Don Gepulango</strong> — a front-end developer from Philippines. I love crafting UI in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
+          <h1>Hello —</h1>
+          <p>My name is <strong>Don Gepulango</strong> — a front-end developer from Philippines. I love crafting UI in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://dribbble.com/BalkanBrothers" target="_blank">Balkan Brothers</a>.</p>
         </div>
-      </div>
+      </section><!--END of .dg-hero-->
 
-    </section><!--END of .dg-hero-->
-
-    <section class="dg-works" id="dg-works">
-      <div class="container-fluid">
-
-        <div class="dg-works-heading">
-          <h2>Projects & Clients</h2>
-          <p>Selected projects that I have work with</p>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>Takumi</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/393474-Takumi">
-              <img src="img/dg-works-takumi.png" class="img-responsive" alt="Takumi">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/charlieissland">Charlie Isslander</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>WebMeeting</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/336655-WebMeeting">
-              <img src="img/dg-works-webmeeting.jpg" class="img-responsive" alt="WebMeeting">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>ConferenceCalling Dashboard</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/277106-Conference-Calling">
-              <img src="img/dg-works-ccdash.png" class="img-responsive" alt="ConferenceCalling Dashboard">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>ConferenceCalling</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/277106-Conference-Calling">
-              <img src="img/dg-works-conferencecalling.png" class="img-responsive" alt="ConferenceCalling">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>InvoiceSherpa</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/212968-Invoice-Sherpa">
-              <img src="img/dg-works-invoicesherpa.jpg" class="img-responsive" alt="InvoiceSherpa">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>LexSherpa</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/shots/2700361-CRM-Dashboard-Home-Inbox-Profile">
-              <img src="img/dg-works-lex.jpg" class="img-responsive" alt="LexSherpa">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>Deliverable</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/shots/2645433-Product-Dashboard">
-              <img src="img/dg-works-deliverable.png" class="img-responsive" alt="Deliverable">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/charlieissland">Charlie Isslander</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>Run&Co</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/shots/2359978-Run-Co-the-box-for-run">
-              <img src="img/dg-works-runco.png" class="img-responsive" alt="Run&Co">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/andrejkrajcir">Andrej Krajčir</a></p>
-          </div>
-        </div>
-
-        <div class="dg-works-item wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h3>Achoo</h3>
-          <div class="dg-work-img-wrap">
-            <a href="https://dribbble.com/BalkanBrothers/projects/255217-Achoo">
-              <img src="img/dg-works-achoo.png" class="img-responsive" alt="Achoo">
-            </a>
-          </div>
-          <div class="dg-work-text">
-            <p><strong>Role:</strong> Front-End Developer</p>
-            <p><strong>Designer:</strong> <a href="https://dribbble.com/filipjustic">Filip Justic</a></p>
-          </div>
-        </div>
-
-      </div>
-    </section><!--END of .dg-works-->
-
-    <footer class="dg-footer" id="dg-footer">
-      <div class="container-fluid">
-        <div class="dg-footer-text wow fadeIn" data-wow-delay="0.2s" data-wow-offset="100">
-          <h2>Get in touch.</h2>
-          <ul class="dg-social list-unstyled list-inline">
-            <li><a href="https://twitter.com/dongepulango" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com/dongepulango/" target="_blank">Instagram</a></li>
-            <li><a href="http://codepen.io/dongepulango/" target="_blank">Codepen</a></li>
-            <li><a href="https://github.com/dongepulango" target="_blank">Github</a></li>
-            <li><a href="https://dribbble.com/dongepulango" target="_blank">Dribbble</a></li>
-          </ul>
-          <p class="dg-copyright">&copy; Copyright 2016. Don Gepulango.</p>
-        </div>
-      </div>
-    </footer>
+      <nav class="dg-social">
+        <ul class="dg-social-links">
+          <li><a href="https://twitter.com/dongepulango" target="_blank">Twitter</a></li>
+          <li><a href="https://www.instagram.com/dongepulango/" target="_blank">Instagram</a></li>
+          <li><a href="http://codepen.io/dongepulango/" target="_blank">Codepen</a></li>
+          <li><a href="https://github.com/dongepulango" target="_blank">Github</a></li>
+          <li><a href="https://dribbble.com/dongepulango" target="_blank">Dribbble</a></li>
+        </ul>
+      </nav><!--END of .dg-social-->
+      
+    </div><!--END of .dg-wrapper-->
 
      <!-- ============= Outdated Browser ============= -->
     <div id="outdated">
@@ -192,9 +57,7 @@
     <!-- =========== END: Outdated Browser ========== -->
 
     <!-- Scripts -->
-    <script src="js/jquery-1.12.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="js/outdatedbrowser.min.js"></script>
     <script src="js/scripts.min.js"></script>
     <!-- Google Analytics -->
