--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
 
     <header class="dg-header">
-      <a href="mailto:dongepulango@gmail.com" class="dg-contact">Contact Me</a>
+      <a href="mailto:dongepulango89@gmail.com" class="dg-contact">Contact Me</a>
     </header><!--END of .dg-header-->
 
     <div class="dg-wrapper">
