--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="dg-hero" id="dg-hero">
         <div class="dg-hero-text" id="dg-hero-text">
           <h1>Hello —</h1>
-          <p>I'm <strong>Don Gepulango</strong> — a front-end developer based in Bacolod City, Philippines. I love crafting UI in the browser using <span class="html">HTML</span>, <span class="css">CSS</span>, and <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://bb.agency/" target="_blank" class="bb-link">Balkan Brothers</a>.</p>
+          <p>I'm <strong>Don Gepulango</strong> — a front-end developer based in Bacolod City, Philippines. I love crafting UI in the browser using <span class="html">HTML</span>, <span class="css">CSS</span> &amp; <span class="js">JS</span>. I'm currently coding front-end with the awesome guys at <a href="https://bb.agency/" target="_blank" class="bb-link">Balkan Brothers</a>.</p>
         </div>
       </section><!--END of .dg-hero-->
 
